--- a/src/globals/variables.scss
+++ b/src/globals/variables.scss
@@ -65,3 +65,5 @@ $spacer-7: 90px;
 $spacer-8: 120px;
 $spacer-9: 150px;
 $spacer-10: 180px;
+
+$icon-size-large: 40px;
